text width bug fix on small screen donation page

--- a/wp-content/themes/headstrong/css/styles.030.css
+++ b/wp-content/themes/headstrong/css/styles.030.css
@@ -814,6 +814,10 @@
   max-width: calc(100% - 95px);
 }
 
+.bottom-cta__text--donation {
+  max-width: 100%;
+}
+
 }
 
 /* Social Media --------------------------------------------------------------*/
